--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>WonderWoman Cleaning | Professional House Cleaning in Frenchtown, New Jersey</title>
+  <title>WonderWoman Cleaning | Professional Cleaning based in Frenchtown, New Jersey</title>
   <meta name="description" content="WonderWoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented." />
 
   <!-- Favicon -->
