--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>WonderWoman Cleaning | Professional Cleaning based in Frenchtown, New Jersey</title>
-  <meta name="description" content="WonderWoman Cleaning offers professional house cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented." />
+  <meta name="description" content="WonderWoman Cleaning offers professional cleaning services in Frenchtown, New Jersey. Reliable, thorough, and detail-oriented." />
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/hero-cleaning.ico">
@@ -77,7 +77,7 @@
   <div class="bg-black bg-opacity-50">
     <div class="max-w-4xl mx-auto text-center py-28 px-6 fade-in">
       <h1 class="text-4xl md:text-5xl font-bold text-white">
-        Professional House Cleaning
+        Family-Run Professional Cleaning
       </h1>
       <p class="mt-4 text-lg text-white">
         Serving Frenchtown, New Jersey & Surrounding Areas
