fix space again

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <a href="tel:+1PHONE_NUMBER"
        class="bg-[var(--brand)] text-white px-5 py-2 rounded-full font-semibold hover:opacity-90 transition">
-     📞 Call &npsb;
+     📞 Call &nbsp;
     </a>
   </div>
 </header>
