--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <header class="sticky top-0 z-40 bg-white shadow">
   <div class="max-w-7xl mx-auto px-6 py-3 flex justify-between items-center">
     <div class="flex items-center gap-3">
-      <img src="images/hero-cleaning.ico" alt="WonderWoman Cleaning Logo" class="w-8 h-8">
+      <img src="images/pilllogo.jpg" alt="WonderWoman Cleaning Logo" class="w-8 h-8">
       <span class="font-bold text-lg text-[var(--brand)]">WonderWoman Cleaning</span>
     </div>
     <a href="tel:+19084378796"
@@ -105,7 +105,7 @@
 </header>
 
 <!-- HERO -->
-<section class="bg-cover bg-center" style="background-image: url('images/pilllogo.jpg');">
+<section class="bg-cover bg-center" style="background-image: url('images/hero-cleaning.jpg');">
   <div class="bg-black bg-opacity-50">
     <div class="max-w-4xl mx-auto text-center py-28 px-6 fade-in">
       <h1 class="text-4xl md:text-5xl font-bold text-white"> 
