--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <header class="sticky top-0 z-40 bg-white shadow">
   <div class="max-w-7xl mx-auto px-6 py-3 flex justify-between items-center">
     <div class="flex items-center gap-3">
-      <img src="images/pilllogo.jpg" alt="WonderWoman Cleaning Logo" class="w-8 h-8">
+      <img src="images/pilllogo.jpg" alt="WonderWoman Cleaning Logo" class="object-contain">
       <span class="font-bold text-lg text-[var(--brand)]">WonderWoman Cleaning</span>
     </div>
     <a href="tel:+19084378796"
