--- a/index.html
+++ b/index.html
@@ -92,20 +92,27 @@
 
 <!-- STICKY HEADER -->
 <header class="sticky top-0 z-40 bg-white shadow">
-  <div class="max-w-7xl mx-auto px-6 py-3 flex justify-between items-center">
-    <div class="flex items-center gap-3">
-      <img src="images/hero-cleaning.ico" alt="WonderWoman Cleaning Logo" class="w-8 h-8">
-      <span class="font-bold text-lg text-[var(--brand)]">WonderWoman Cleaning</span>
+  <div class="max-w-7xl mx-auto px-6 py-1 flex justify-between items-center relative">
+    <!-- Logo left -->
+    <div class="w-28 flex items-center">
+      <img src="images/pilllogo.jpg" alt="WonderWoman Cleaning Logo" class="w-28 h-18">
     </div>
+
+    <!-- Centered title image -->
+    <div class="absolute left-1/2 -translate-x-1/2">
+      <img src="images/title.png" alt="WonderWoman Cleaning Service" class="h-10 w-auto">
+    </div>
+
+    <!-- Call button right -->
     <a href="tel:+19084378796"
-       class="bg-[var(--brand)] text-white px-5 py-2 rounded-full font-semibold hover:opacity-90 transition">
+       class="bg-[var(--brand)] text-white px-4 py-1 rounded-full font-semibold hover:opacity-90 transition">
      📞 Call &nbsp;
     </a>
   </div>
 </header>
 
 <!-- HERO -->
-<section class="bg-cover bg-center" style="background-image: url('images/pilllogo.jpg');">
+<section class="bg-cover bg-center" style="background-image: url('images/hero-cleaning.jpg');">
   <div class="bg-black bg-opacity-50">
     <div class="max-w-4xl mx-auto text-center py-28 px-6 fade-in">
       <h1 class="text-4xl md:text-5xl font-bold text-white"> 
