--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
 
 <!-- STICKY HEADER -->
 <header class="sticky top-0 z-40 bg-white shadow">
-  <div class="max-w-7xl mx-auto px-6 py-1 flex justify-between items-center relative">
+  <div class="max-w-7xl mx-auto px-3 py-1 flex justify-between items-center relative">
     <!-- Logo left -->
-    <div class="w-28 flex items-center">
-      <img src="images/pilllogo.jpg" alt="WonderWoman Cleaning Logo" class="w-28 h-18">
+    <div class="w-16 sm:w-28 flex items-center shrink-0">
+      <img src="images/pilllogo.jpg" alt="WonderWoman Cleaning Logo" class="w-16 sm:w-28">
     </div>
 
     <!-- Centered title image -->
-    <div class="absolute left-1/2 -translate-x-1/2">
-      <img src="images/title.png" alt="WonderWoman Cleaning Service" class="h-10 w-auto">
+    <div class="absolute left-1/2 -translate-x-1/2 px-2">
+      <img src="images/title.png" alt="WonderWoman Cleaning Service" class="h-7 sm:h-10 w-auto max-w-[160px] sm:max-w-none">
     </div>
 
     <!-- Call button right -->
     <a href="tel:+19084378796"
-       class="bg-[var(--brand)] text-white px-4 py-1 rounded-full font-semibold hover:opacity-90 transition">
-     📞 Call &nbsp;
+       class="shrink-0 bg-[var(--brand)] text-white px-3 py-1 rounded-full font-semibold hover:opacity-90 transition text-sm sm:text-base">
+     📞 Call
     </a>
   </div>
 </header>
@@ -270,8 +270,8 @@
     <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-6"></div>
 
     <p class="text-lg font-semibold">
-      📞 <a href="tel:+19084378796" class="text-[var(--brand)] hover:underline">908-437-8796</a><br>
-      ✉️ <a href="mailto:sales@wonderwomanhomecleaningservice.com" class="text-[var(--brand)] hover:underline">sales@wonderwomanhomecleaningservice.com</a>
+      <span class="flex items-center justify-center gap-1">📞 <a href="tel:+19084378796" class="text-[var(--brand)] hover:underline">908-437-8796</a></span><br>
+      <span class="flex items-center justify-center gap-1 flex-wrap">✉️ <a href="mailto:sales@wonderwomanhomecleaningservice.com" class="text-[var(--brand)] hover:underline break-all">sales@wonderwomanhomecleaningservice.com</a></span>
     </p>
   </div>
 </section>
@@ -287,7 +287,7 @@
 </div>
 
 <!-- JS -->
-<script>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
   // Fade-in observer
   const observer = new IntersectionObserver(entries => {
     entries.forEach(e => e.isIntersecting && e.target.classList.add('show'));
