--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
     <h2 class="text-3xl font-bold mb-2">Get a Free Quote</h2>
     <div class="w-16 h-1 bg-[var(--brand)] mx-auto mb-6"></div>
 
-    <p class="text-lg font-semibold">
-      <span class="flex items-center justify-center gap-1">📞 <a href="tel:+19084378796" class="text-[var(--brand)] hover:underline">908-437-8796</a></span><br>
-      <span class="flex items-center justify-center gap-1 flex-wrap">✉️ <a href="mailto:sales@wonderwomanhomecleaningservice.com" class="text-[var(--brand)] hover:underline break-all">sales@wonderwomanhomecleaningservice.com</a></span>
-    </p>
+    <div class="font-semibold space-y-1">
+      <div class="flex items-center justify-center gap-1 text-lg">📞 <a href="tel:+19084378796" class="text-[var(--brand)] hover:underline">908-437-8796</a></div>
+      <div class="flex items-center justify-center gap-1" style="font-size: clamp(0.65rem, 3.5vw, 1.125rem); white-space: nowrap;">✉️ <a href="mailto:sales@wonderwomanhomecleaningservice.com" class="text-[var(--brand)] hover:underline">sales@wonderwomanhomecleaningservice.com</a></div>
+    </div>
   </div>
 </section>
 
