--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <li>🍽️ <strong>Kitchen:</strong> Sink, countertops, appliances, tables & chairs, oven & stove (outside), microwave (in & out), fridge (outside), floors swept & mopped, baseboards & cobwebs</li>
           <li>🚿 <strong>Bathroom:</strong> Vanity, sink, toilet, tub, shower, mirrors, light fixtures, floors swept & mopped, baseboards & cobwebs</li>
           <li>🛏️ <strong>Rooms / Bedrooms:</strong> Furniture dusted & polished, window sills, mirrors, carpets vacuumed, floors swept & mopped, trash emptied, ceiling fans & fixtures dusted, baseboards & cobwebs</li>
-          <li>🧼 <strong>Our Meaterials!</strong> Everything done with OUR soaps & materials!</li>
+          <li>🧼 <strong>Our Materials!</strong> Everything done with OUR soaps & materials!</li>
         </ul>
       </div>
     </div>
