--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	Professional Cleaning Service <br> Family Owned & Operated
       </h1>
       <p class="mt-4 text-lg text-white">
-        Serving Frenchtown, New Jersey & Surrounding Areas
+        Serving Hunterdon, Somerset, & Warren Counties
       </p>
       <a href="#contact"
          class="mt-8 inline-block bg-[var(--brand)] text-white font-semibold py-4 px-8 rounded shadow hover:opacity-90 transition">
@@ -178,7 +178,7 @@
       <!-- Your Supplies -->
       <div class="price-card p-8 text-center">
         <div class="inline-block bg-[#f3e8f2] text-[var(--brand-dark)] text-sm font-semibold px-4 py-1 rounded-full mb-4">Your Supplies</div>
-        <div class="text-5xl font-extrabold text-gray-800 mb-1">$24<span class="text-2xl font-medium text-gray-400">/hr</span></div>
+        <div class="text-3xl font-extrabold text-gray-800 mb-1">Flat Rate/Per Hour<span class="text-2xl font-medium text-gray-400"></span></div>
         <h3 class="text-xl font-semibold text-[var(--brand)] mb-6">Standard Cleaning</h3>
         <ul class="text-gray-600 text-left space-y-2 text-sm">
           <li>🍽️ <strong>Kitchen:</strong> Sink, countertops, appliances, tables & chairs, oven & stove (outside), microwave (in & out), fridge (outside), floors swept & mopped, baseboards & cobwebs</li>
@@ -191,7 +191,7 @@
       <div class="price-card p-8 text-center border-[var(--brand)] relative">
         <div class="absolute -top-4 left-1/2 -translate-x-1/2 bg-[var(--brand)] text-white text-xs font-bold px-4 py-1 rounded-full shadow">WE BRING EVERYTHING</div>
         <div class="inline-block bg-[#f3e8f2] text-[var(--brand-dark)] text-sm font-semibold px-4 py-1 rounded-full mb-4 mt-2">Our Supplies</div>
-        <div class="text-5xl font-extrabold text-gray-800 mb-1">$26<span class="text-2xl font-medium text-gray-400">/hr</span></div>
+        <div class="text-3xl font-extrabold text-gray-800 mb-1">Flat Rate/Per Hour<span class="text-2xl font-medium text-gray-400"></span></div>
         <h3 class="text-xl font-semibold text-[var(--brand)] mb-6">Standard Cleaning</h3>
         <ul class="text-gray-600 text-left space-y-2 text-sm">
           <li>🍽️ <strong>Kitchen:</strong> Sink, countertops, appliances, tables & chairs, oven & stove (outside), microwave (in & out), fridge (outside), floors swept & mopped, baseboards & cobwebs</li>
@@ -209,16 +209,16 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-x-12">
         <div>
           <div class="addon-row"><span class="text-gray-700">Dusting frames, knick-knacks, artwork</span><span class="price-badge">$5 / room</span></div>
-          <div class="addon-row"><span class="text-gray-700">Refrigerator (inside)</span><span class="price-badge">$20</span></div>
+          <div class="addon-row"><span class="text-gray-700">Refrigerator (inside)</span><span class="price-badge">$50</span></div>
           <div class="addon-row"><span class="text-gray-700">Oven (inside, top & under burners)</span><span class="price-badge">$10</span></div>
-          <div class="addon-row"><span class="text-gray-700">Windows (inside)</span><span class="price-badge">$2 / window</span></div>
-          <div class="addon-row"><span class="text-gray-700">Laundry (washed, dried, folded)</span><span class="price-badge">$5 / load</span></div>
+          <div class="addon-row"><span class="text-gray-700">Windows (inside)</span><span class="price-badge">$6 / window</span></div>
+          <div class="addon-row"><span class="text-gray-700">Laundry (washed, dried, folded)</span><span class="price-badge">$10 / load</span></div>
           <div class="addon-row"><span class="text-gray-700">Dishes (washed, dried, put away)</span><span class="price-badge">$10</span></div>
         </div>
         <div>
           <div class="addon-row"><span class="text-gray-700">Beds changed</span><span class="price-badge">$5 / bed</span></div>
           <div class="addon-row"><span class="text-gray-700">Blinds dusted</span><span class="price-badge">$5 / window</span></div>
-          <div class="addon-row"><span class="text-gray-700">Kitchen cabinets (inside)</span><span class="price-badge">$25</span></div>
+          <div class="addon-row"><span class="text-gray-700">Kitchen cabinets (outside)</span><span class="price-badge">$45</span></div>
           <div class="addon-row"><span class="text-gray-700">Carpet spot stain removal</span><span class="price-badge">$10</span></div>
           <div class="addon-row"><span class="text-gray-700">Carpet steam cleaning</span><span class="price-badge">$40 / room<br><span style="font-size:0.75rem;font-weight:400;">($35/room for 3+ rooms)</span></span></div>
           <div class="addon-row"><span class="text-gray-700">Organization (cabinets, dressers, closets)</span><span class="price-badge">$35 / room</span></div>
